[package]
name = "time-dilation"
version = "0.1.11"
edition = "2024"
license = "MIT"
description = "Scoped timers that print execution-time summaries on drop"
repository = "https://github.com/piot/time-dilation"
keywords = ["timer", "benchmark", "profiling"]
categories = ["profiling", "benchmarks"]

[dependencies]

[features]
default = []
enable_summary = []
